# Avalon.Server

./: .editorconfig  .gitignore  .gitmodules  404.html  Avalon.Server.sln  Avalon.sln  Avalon.sln.DotSettings  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  TODO-OSS.md  TODO.md  azure-pipelines.yml  cert-server-udp.pem  docker-compose.tools.yml  docker-compose.yml  index.html  mkdocs.yml  nuget.config  sgKey.snk  sitemap.xml
src/Platform/: .clang-tidy  CMakeLists.txt  main.cpp
src/Platform/client/: CMakeLists.txt
src/Platform/client/src/: main.cpp
src/Platform/cmake/: FindMariaDBClient.cmake
src/Platform/common/: CMakeLists.txt
src/Platform/common/include/Common/: Banner.h  Types.h
src/Platform/common/include/Common/Asio/: AsioHacksFwd.h  Resolver.h
src/Platform/common/include/Common/Configuration/: ConfigManager.h
src/Platform/common/include/Common/Cryptography/: ARC4.h  CryptoHash.h  CryptoRandom.h  HMAC.h  OpenSSLCrypto.h
src/Platform/common/include/Common/IPLocation/: IPLocation.h
src/Platform/common/include/Common/Logging/: Log.h
src/Platform/common/include/Common/Network/: NetworkThread.h  SSLCient.h  Socket.h  SocketMgr.h
src/Platform/common/include/Common/Threading/: PCQueue.h  (+2 more)
src/Platform/common/src/: Banner.cpp
src/Platform/common/src/Configuration/: BuiltInConfig.cpp  ConfigManager.cpp
src/Platform/common/src/Cryptography/: ARC4.cpp  BigNumber.cpp  CryptoRandom.cpp  OpenSSLCrypto.cpp
src/Platform/common/src/IPLocation/: IPLocation.cpp
src/Platform/common/src/Logging/: Log.cpp
src/Platform/common/src/Network/: SSLClient.cpp
src/Platform/common/src/Packets/: ByteBuffer.cpp
src/Platform/common/src/Threading/: ProcessPriority.cpp
src/Platform/common/src/Utilities/: Random.cpp  SFMTRand.cpp  StartProcess.cpp  Util.cpp
src/Platform/configs/: avalon.conf
src/Platform/database/: CMakeLists.txt
src/Platform/database/include/Database/: AdhocStatement.h  DatabaseEnv.h  DatabaseEnvFwd.h  DatabaseLoader.h  DatabaseWorker.h  DatabaseWorkerPool.h  Field.h  MySQLConnection.h  MySQLHacks.h  MySQLPreparedStatement.h  MySQLThreading.h  MySQLWorkaround.h  PreparedStatement.h  QueryCallback.h  QueryHolder.h  QueryResult.h  SQLOperation.h  Transaction.h
src/Platform/database/include/Logging/: AppenderDB.h
src/Platform/database/include/Updater/: DBUpdater.h  UpdateFetcher.h
src/Platform/database/src/Database/: AdhocStatement.cpp  DatabaseEnv.cpp  DatabaseLoader.cpp  DatabaseWorker.cpp  DatabaseWorkerPool.cpp  Field.cpp  MySQLConnection.cpp  MySQLPreparedStatement.cpp  MySQLThreading.cpp  PreparedStatement.cpp  QueryCallback.cpp  QueryHolder.cpp  QueryResult.cpp  Transaction.cpp
src/Platform/database/src/Logging/: AppenderDB.cpp
src/Platform/database/src/Updater/: DBUpdater.cpp  UpdateFetcher.cpp
src/Platform/game_layer/: CMakeLists.txt
src/Platform/game_layer/include/: GameLayer.h
src/Platform/game_layer/src/: GameLayer.cpp
src/Platform/genrev/: CMakeLists.txt
src/Platform/platform_layer/: CMakeLists.txt
src/Platform/platform_layer/include/: Application.h  DLLLoader.h  Platform.h  PlatformWindow.h  Types.h  Window.h
src/Platform/platform_layer/linux/: CMakeLists.txt
src/Platform/platform_layer/mac/: CMakeLists.txt
src/Platform/platform_layer/mac/src/: MyAppDelegate.hpp  MyAppDelete.cpp  MyMTKViewDelegate.cpp  MyMTKViewDelegate.hpp  Platform.cpp  Renderer.cpp  Renderer.hpp
src/Platform/platform_layer/src/: Application.cpp  Window.cpp
src/Platform/platform_layer/src/Network/: SSLCient.h
src/Platform/platform_layer/windows/: CMakeLists.txt
src/Platform/platform_layer/windows/src/: DLLLoader.cpp  File.cpp  Platform.cpp
src/Platform/server/: CMakeLists.txt
src/Platform/server/apps/: CMakeLists.txt
src/Platform/server/apps/worldserver/: CMakeLists.txt
src/Platform/server/game/: CMakeLists.txt
src/Platform/server/shared/: CMakeLists.txt
src/Platform/server/src/: Banner.cpp  Banner.h  FreezeDetector.cpp  FreezeDetector.h  Versioning.h  main.cpp
src/Platform/server/src/CommandLine/: CliRunnable.cpp
src/Platform/server/src/Database/: MySQLThreading.cpp
src/Platform/server/src/Realms/: Realm.cpp  Realm.h
src/Platform/server/src/Server/: WorldPacket.h  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h
src/Platform/server/src/Time/: GameTime.cpp  GameTime.h
src/Platform/shared/: CMakeLists.txt
src/Platform/shared/include/: revision.h
src/Platform/shared/include/Asio/: DeadlineTimer.h  IpNetwork.h
src/Platform/shared/include/Common/: Types.h
src/Platform/shared/include/Configuration/: BuiltInConfig.h  ConfigManager.h
src/Platform/shared/include/Cryptography/: ARC4.h  BigNumber.h  CryptoConstants.h  CryptoHash.h  HMAC.h
src/Platform/shared/include/Debugging/: Errors.h
src/Platform/shared/include/Logging/: Log.h  LogMessage.h  Logger.h
src/Platform/shared/include/Network/: AsyncAcceptor.h  NetworkThread.h  Socket.h  SocketMgr.h
src/Platform/shared/include/Packets/: ByteBuffer.h
src/Platform/shared/include/Threading/: ProcessPriority.h
src/Platform/shared/include/Utilities/: AsyncCallbackProcessor.h  ByteConverter.h  Containers.h  Duration.h  Random.h  SFMTRand.h  SmartEnum.h  StringConvert.h  StringFormat.h  Timer.h  Util.h
src/Platform/shared/src/: GitRevision.cpp
src/Platform/shared/src/Configuration/: BuiltInConfig.cpp  ConfigManager.cpp
src/Platform/shared/src/Cryptography/: ARC4.cpp  BigNumber.cpp  CryptoRandom.cpp  OpenSSLCrypto.cpp
src/Platform/shared/src/Debugging/: Errors.cpp
src/Platform/shared/src/IPLocation/: IPLocation.cpp
src/Platform/shared/src/Logging/: Appender.cpp  AppenderConsole.cpp  AppenderFile.cpp  Log.cpp  LogMessage.cpp  LogOperation.cpp  Logger.cpp  enuminfo_AppenderConsole.cpp  enuminfo_LogCommon.cpp
src/Platform/shared/src/Network/: SSLClient.cpp
src/Platform/shared/src/Packets/: ByteBuffer.cpp
src/Platform/shared/src/Threading/: ProcessPriority.cpp
src/Platform/shared/src/Utilities/: Random.cpp  SFMTRand.cpp  StartProcess.cpp  StringFormat.cpp  Timer.cpp  Tokenize.cpp  Util.cpp
(+1749 files in other folders)
